yaml/nginx-ingress.yaml
#ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: whoami.com
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-service
          servicePort: 80
